# WasmEdge

./: CMakeLists.txt
.github/workflows/: build.yml
include/aot/: compiler.h
include/api/: wasmedge.h.in
include/api/wasmedge/: wasmedge.h
include/ast/: section.h
include/common/: defines.h  enum_ast.h  enum_configure.h  version.h.in
include/executor/: executor.h
include/host/wasi/: environ.h
include/loader/: loader.h
include/plugin/: plugin.h
include/runtime/: stackmgr.h
include/vm/: vm.h
lib/: CMakeLists.txt
lib/aot/: compiler.cpp
lib/api/: CMakeLists.txt  wasmedge.cpp
lib/executor/: helper.cpp
lib/executor/engine/: controlInstr.cpp  engine.cpp  proxy.cpp  variableInstr.cpp
lib/executor/instantiate/: data.cpp  elem.cpp  export.cpp  function.cpp  global.cpp  import.cpp  memory.cpp  module.cpp  table.cpp
lib/host/wasi/: CMakeLists.txt
lib/interpreter/engine/: proxy.cpp
lib/loader/: loader.cpp
lib/loader/ast/: instruction.cpp  section.cpp  segment.cpp
lib/plugin/: CMakeLists.txt  plugin.cpp
lib/validator/: formchecker.cpp
lib/vm/: CMakeLists.txt  vm.cpp
mentorship/: BubbleSort.cpp  bublesort.cpp  demo.js  demo.wasm  markdown.md
plugins/: CMakeLists.txt
plugins/wasmedge_process/: CMakeLists.txt  plugin.cpp  processfunc.cpp  processmodule.cpp
test/: CMakeLists.txt
test/aot/: AOTcoreTest.cpp
test/api/: APIUnitTest.cpp
test/executor/: ExecutorTest.cpp
test/host/wasi/: CMakeLists.txt  socketTests.py
test/host/wasi/socket/: TCPclient.cpp  TCPserver.cpp
test/plugins/wasmedge_process/: wasmedge_process.cpp
test/spec/: CMakeLists.txt  spectest.cpp
tools/wasmedge/: wasmedgec.cpp  wasmedger.cpp
